--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "一生想做浪漫极客"
+description: "Life is like a box of chocolates, U never know what you’re gonna get!"
 ---
 
 {% for post in paginator.posts %}
